# MyUsagi

./: .gitignore  AGENTS.md  README.md  myusagi  myusagi.cmd  package.json  tsconfig.json  vitest.config.mjs
.cargo/: config.toml
native/: Cargo.toml  tauri.conf.json
native/capabilities/: default.json
native/icons/: icon.icns
native/permissions/: drag.toml  fit-window.toml  get-asset-bundle.toml  pet-commands.toml
native/src/: commands.rs  cursor.rs  lib.rs  main.rs  menu.rs  pack.rs  prefs.rs  state.rs  vault.rs  window.rs
native/src/platform/: macos.rs  mod.rs  windows.rs
scripts/: bake-usagi-dance.mjs  build-webview.ts  unpack-pak.mjs
webview/: assets.pak  styles.css
webview/src/: action.ts  audio.ts  character.ts  pet-bridge.ts  region.ts  renderer.ts  trigger.ts  types.ts  util.ts
webview/src/pets/: registry.ts  usagi-roll.ts  usagi.ts
webview/src/speech/: data.ts  index.ts
webview/tests/: registry.test.mjs  setup.mjs  trigger-guard.test.mjs  util.test.mjs
webview/tests/engine/: action-engine.test.mjs  region.test.mjs  setup-vitest.mjs  speech-engine.test.mjs  trigger-dispatch.test.mjs
