[package]
name = "myusagi"
version = "0.0.1"
description = "Desktop pet for macOS & Windows (Tauri)"
authors = ["WayneYe"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "myusagi"
path = "src/lib.rs"

[[bin]]
name = "myusagi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
rand = "0.8"
base64 = "0.22"
parking_lot = "0.12"
directories = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
